z-index fix       1.0.20

--- a/dev/sass/confirm.sass
+++ b/dev/sass/confirm.sass
@@ -1,5 +1,5 @@
 .modal
-  z-index: 100000000050
+  z-index: 100000050
   .modal-content
     border-radius: 5px
 
